Add the custom css code and to update the html file

--- a/GitHtml.html
+++ b/GitHtml.html
@@ -1,8 +1,21 @@
+<!DOCTYPE html>
 <html>
 <head>
-<title>Git Commands</title>
+  <link rel="stylesheet" href="Git.css">
 </head>
+<title>Git Commands</title>
 <body>
 <h1>Welcome to Git Environment</h1>
+<h3>Git Introduction</h3>
+<ul>
+	<li>Git was developed by Linus Torvalds in 2005 for Linux kernel development.</li>
+	<li>Git is a version control system (VCS) or Source code management (SCM).</li>
+	<li>Git is a distributed version control system (DVCS) widely used for tracking changes in source code during software development.</li>
+	<li>It is a platform independent.</li>
+	<li>It is free and open source.</li>
+	<li>Git can handle large projects efficiently.</li>
+</ul>
+<h2>Git Repository URL:</h2>
+<p>https://github.com/NJV666/DemoGitCommandsPractice.git</p>
 </body>
 </html>
